--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Blog - Rohitt Vashishtha</title>
     <link rel="stylesheet" type="text/css" href="/lib/css/github-markdown.css">
-    <link rel="stylesheet" type="text/css" href="lib/code-syntax.css">
+    <link rel="stylesheet" type="text/css" href="/lib/css/code-syntax.css">
     <link rel="stylesheet" type="text/css" href="/lib/css/w3.css">
     <link rel="stylesheet" type="text/css" href="/lib/css/index.css">
     <link rel="stylesheet" type="text/css" href="/lib/css/blog.css">
@@ -17,10 +17,9 @@
             <img id="profile-image" src="/lib/img/profile.jpg">
         </div>
         <div id="post-title-container">
-            <h2 id="blog-title">Rohitt's Blog</h2>
+            <h2 id="blog-title">Raia Developer Environment</h2>
             <h2 id="post-title"></h2>
         </div>
-        <!-- <div id="buttons-container"></div> -->
     </div>
     <div id="content-container">
         <div id="sidebar-container">
@@ -40,9 +39,9 @@
         </div>
     </div>
 </div>
-    <script type="text/javascript" src="lib/markdown-it.js"></script>
-    <script type="text/javascript" src="lib/markdown-it-footnote.js"></script>
-    <script type="text/javascript" src="lib/highlight.pack.js"></script>
+    <script type="text/javascript" src="/lib/js/markdown-it.js"></script>
+    <script type="text/javascript" src="/lib/js/markdown-it-footnote.js"></script>
+    <script type="text/javascript" src="/lib/js/highlight.pack.js"></script>
     <script type="text/javascript" src="js/interface.js"></script>
     <script type="text/javascript" src="js/events.js"></script>
     <script type="text/javascript" src="js/loader.js"></script>
