--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 
 <head>
     <title>Blog - Rohitt Vashishtha</title>
-    <link rel="stylesheet" type="text/css" href="/lib/css/github-markdown.css">
-    <link rel="stylesheet" type="text/css" href="/lib/css/code-syntax.css">
-    <link rel="stylesheet" type="text/css" href="/lib/css/w3.css">
-    <link rel="stylesheet" type="text/css" href="/lib/css/index.css">
-    <link rel="stylesheet" type="text/css" href="/lib/css/blog.css">
+    <link rel="stylesheet" type="text/css" href="..//lib/css/github-markdown.css">
+    <link rel="stylesheet" type="text/css" href="../lib/css/code-syntax.css">
+    <link rel="stylesheet" type="text/css" href="../lib/css/w3.css">
+    <link rel="stylesheet" type="text/css" href="css/blog.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -14,7 +13,7 @@
 <div id="master-container">
     <div id="header-container">
         <div id="blog-icon-container">
-            <img id="profile-image" src="/lib/img/profile.jpg">
+            <img id="profile-image" src="../lib/img/profile.jpg">
         </div>
         <div id="post-title-container">
             <h2 id="blog-title">Raia Developer Environment</h2>
@@ -39,9 +38,9 @@
         </div>
     </div>
 </div>
-    <script type="text/javascript" src="/lib/js/markdown-it.js"></script>
-    <script type="text/javascript" src="/lib/js/markdown-it-footnote.js"></script>
-    <script type="text/javascript" src="/lib/js/highlight.pack.js"></script>
+    <script type="text/javascript" src="../lib/js/markdown-it.js"></script>
+    <script type="text/javascript" src="../lib/js/markdown-it-footnote.js"></script>
+    <script type="text/javascript" src="../lib/js/highlight.pack.js"></script>
     <script type="text/javascript" src="js/interface.js"></script>
     <script type="text/javascript" src="js/events.js"></script>
     <script type="text/javascript" src="js/loader.js"></script>
