abstraction: Add config file support.

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>Blog - Rohitt Vashishtha</title>
-    <link rel="stylesheet" type="text/css" href="..//lib/css/github-markdown.css">
+    <title>Raia</title>
+    <link rel="stylesheet" type="text/css" href="../lib/css/github-markdown.css">
     <link rel="stylesheet" type="text/css" href="../lib/css/code-syntax.css">
     <link rel="stylesheet" type="text/css" href="../lib/css/w3.css">
     <link rel="stylesheet" type="text/css" href="css/blog.css">
@@ -13,10 +13,10 @@
 <div id="master-container">
     <div id="header-container">
         <div id="blog-icon-container">
-            <img id="profile-image" src="../lib/img/profile.jpg">
+            <img id="profile-image">
         </div>
         <div id="post-title-container">
-            <h2 id="blog-title">Raia Developer Environment</h2>
+            <h2 id="blog-title">Raia</h2>
             <h2 id="post-title"></h2>
         </div>
     </div>
