tools: Add gulp and automate builds. Core Build Size is 190 KiB.

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 
 <head>
     <title>Raia</title>
+    <!-- build:css css/main.min.css -->
     <link rel="stylesheet" type="text/css" href="../lib/css/github-markdown.css">
     <link rel="stylesheet" type="text/css" href="../lib/css/code-syntax.css">
     <link rel="stylesheet" type="text/css" href="../lib/css/w3.css">
     <link rel="stylesheet" type="text/css" href="css/blog.css">
+    <!-- endbuild -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -38,6 +40,7 @@
         </div>
     </div>
 </div>
+    <!-- build:js js/main.min.js -->
     <script type="text/javascript" src="../lib/js/markdown-it.js"></script>
     <script type="text/javascript" src="../lib/js/markdown-it-footnote.js"></script>
     <script type="text/javascript" src="../lib/js/highlight.pack.js"></script>
@@ -45,5 +48,6 @@
     <script type="text/javascript" src="js/events.js"></script>
     <script type="text/javascript" src="js/loader.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
