ux: Add keyboard shortcuts. Fix image resize bug. Add url error message.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../lib/css/w3.css">
     <link rel="stylesheet" type="text/css" href="css/blog.css">
     <!-- endbuild -->
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -169,7 +170,9 @@
     <!-- build:js js/main.min.js -->
     <script type="text/javascript" src="../lib/js/markdown-it.js"></script>
     <script type="text/javascript" src="../lib/js/markdown-it-footnote.js"></script>
-    <script type="text/javascript" src="../lib/js/highlight.pack.js"></script> 
+    <script type="text/javascript" src="../lib/js/highlight.pack.js"></script>
+    <script type="text/javascript" src="../lib/js/mousetrap.min.js"></script>
+    <script type="text/javascript" src="js/templates.js"></script>
     <script type="text/javascript" src="js/interface.js"></script>
     <script type="text/javascript" src="js/events.js"></script>
     <script type="text/javascript" src="js/loader.js"></script>
