--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../lib/css/w3.css">
     <link rel="stylesheet" type="text/css" href="css/blog.css">
     <!-- endbuild -->
+    <link id="favicon" rel="shortcut icon" type="image/png" href="" />
     <meta charset="utf-8"/>
     <meta name="fragment" content="!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
